Get ready to put it on github.io

--- a/gas.html
+++ b/gas.html
@@ -7,14 +7,14 @@
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/paper.js/0.9.22/paper-full.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/dat-gui/0.5/dat.gui.min.js"></script>
-        <script src="victor.js"></script>
+        <script src="victor/build/victor.min.js"></script>
 
         <!-- my stuff -->
-        <script src="maxwell.js"></script>
-        <script src="particle.js"></script>
+        <script src="js/maxwell.js"></script>
+        <script src="js/particle.js"></script>
 
         <!-- this particular demo -->
-        <script src="brownian.js"></script>
+        <script src="js/brownian.js"></script>
     </head>
     <body>
         <canvas id="physics-canvas" resize></canvas>
