--- a/gravity.html
+++ b/gravity.html
@@ -11,12 +11,12 @@
         </style>
 
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-        <script src="victor.js"></script>
+        <script src="victor/build/victor.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/paper.js/0.9.22/paper-full.min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/dat-gui/0.5/dat.gui.min.js"></script>
 
-        <script src="particle.js"></script>
-        <script src="gravity.js"></script>
+        <script src="js/particle.js"></script>
+        <script src="js/gravity.js"></script>
     </head>
     <body>
         <canvas id="physics-canvas" resize></canvas>
