--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
                 <li>Pendulum Experiment: <a href="pendulum.html">click here</a></li>
                 <li>Calculating pi using Monte Carlo Methods <a href="monte.html">click here</a></li>
                 <li>Calculating pi using Monte Carlo Methods (faster) <a href="https://github.com/matthewelse/experiments/blob/master/monte.swift">click here</a></li>
+                <li>Simple Harmonic Motion: <a href="shm.html">click here</a></li>
+                <li>Conway's Game of Life: <a href="conways.html">click here</a></li>
             </ul>
         </div>
     </body>
