--- a/shm.html
+++ b/shm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Pendulum Experiment</title>
+        <title>SHM Experiment</title>
 
         <style type="text/css">
         body {
@@ -16,9 +16,9 @@
         <script src="//cdnjs.cloudflare.com/ajax/libs/dat-gui/0.5/dat.gui.min.js"></script>
 
         <script src="js/particle.js"></script>
-        <script src="js/pendulum.js"></script>
+        <script src="js/shm.js"></script>
     </head>
     <body>
-        <canvas id="physics-canvas" resize></canvas>
+        <canvas id="physics-canvas"></canvas>
     </body>
 </html>
